trying some stuff

--- a/adding_country_codes.ipynb
+++ b/adding_country_codes.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "bef4f53e-fe0b-4d7e-a68b-dfe8894d6e89",
    "metadata": {},
    "outputs": [],
@@ -251,71 +251,264 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "id": "bd941240-80c1-4186-a033-e2de19a0f378",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GDP \\n($ USD billions PPP)</th>\n",
+       "      <th>GDP per capita in $ (PPP)</th>\n",
+       "      <th>ISO Country code</th>\n",
+       "      <th>Military Spending as % of GDP</th>\n",
+       "      <th>health expenditure \\n% of GDP</th>\n",
+       "      <th>health expenditure \\nper person</th>\n",
+       "      <th>unemployment (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.69522</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.25580</td>\n",
+       "      <td>184.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.51198</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.37331</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>75.600418</td>\n",
+       "      <td>2082.392197</td>\n",
+       "      <td>AFG</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.19979</td>\n",
+       "      <td>69.998604</td>\n",
+       "      <td>8.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1561</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>36.055686</td>\n",
+       "      <td>2556.793484</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.86611</td>\n",
+       "      <td>141.369308</td>\n",
+       "      <td>5.100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1562</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>33.840340</td>\n",
+       "      <td>2408.154197</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>0.007000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>103.028272</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1563</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>31.725742</td>\n",
+       "      <td>2251.455674</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1564</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>33.581514</td>\n",
+       "      <td>2444.478237</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>0.000135</td>\n",
+       "      <td>3.86611</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.174</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1565</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>ZWE</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.00000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1566 rows × 9 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0       Afghanistan\n",
-       "1       Afghanistan\n",
-       "2       Afghanistan\n",
-       "3       Afghanistan\n",
-       "4       Afghanistan\n",
-       "           ...     \n",
-       "1909       Zimbabwe\n",
-       "1910       Zimbabwe\n",
-       "1911       Zimbabwe\n",
-       "1912       Zimbabwe\n",
-       "1913       Zimbabwe\n",
-       "Name: Country, Length: 1914, dtype: object"
+       "          Country  Year  GDP \\n($ USD billions PPP)  \\\n",
+       "0     Afghanistan  2014                         NaN   \n",
+       "1     Afghanistan  2015                         NaN   \n",
+       "2     Afghanistan  2016                         NaN   \n",
+       "3     Afghanistan  2017                         NaN   \n",
+       "4     Afghanistan  2018                   75.600418   \n",
+       "...           ...   ...                         ...   \n",
+       "1561     Zimbabwe  2018                   36.055686   \n",
+       "1562     Zimbabwe  2019                   33.840340   \n",
+       "1563     Zimbabwe  2020                   31.725742   \n",
+       "1564     Zimbabwe  2021                   33.581514   \n",
+       "1565     Zimbabwe  2022                         NaN   \n",
+       "\n",
+       "      GDP per capita in $ (PPP) ISO Country code  \\\n",
+       "0                      0.000000              AFG   \n",
+       "1                      0.000000              AFG   \n",
+       "2                      0.000000              AFG   \n",
+       "3                      0.000000              AFG   \n",
+       "4                   2082.392197              AFG   \n",
+       "...                         ...              ...   \n",
+       "1561                2556.793484              ZWE   \n",
+       "1562                2408.154197              ZWE   \n",
+       "1563                2251.455674              ZWE   \n",
+       "1564                2444.478237              ZWE   \n",
+       "1565                   0.000000              ZWE   \n",
+       "\n",
+       "      Military Spending as % of GDP  health expenditure \\n% of GDP  \\\n",
+       "0                          0.000000                        3.69522   \n",
+       "1                          0.000000                        3.25580   \n",
+       "2                          0.000000                        3.51198   \n",
+       "3                          0.000000                        3.37331   \n",
+       "4                          0.000000                        3.19979   \n",
+       "...                             ...                            ...   \n",
+       "1561                       0.000000                        3.86611   \n",
+       "1562                       0.007000                        0.00000   \n",
+       "1563                       0.000000                        0.00000   \n",
+       "1564                       0.000135                        3.86611   \n",
+       "1565                       0.000000                        0.00000   \n",
+       "\n",
+       "      health expenditure \\nper person  unemployment (%)  \n",
+       "0                            0.000000             0.000  \n",
+       "1                          184.000000             0.000  \n",
+       "2                            0.000000             0.000  \n",
+       "3                            0.000000             0.000  \n",
+       "4                           69.998604             8.500  \n",
+       "...                               ...               ...  \n",
+       "1561                       141.369308             5.100  \n",
+       "1562                       103.028272             0.000  \n",
+       "1563                         0.000000             0.000  \n",
+       "1564                         0.000000             5.174  \n",
+       "1565                         0.000000             0.000  \n",
+       "\n",
+       "[1566 rows x 9 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp['Country']"
+    "temp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "1bb696ef-6e80-492b-9147-fc02b3dff6da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0       AFG\n",
-       "1       AFG\n",
-       "2       AFG\n",
-       "3       AFG\n",
-       "4       AFG\n",
-       "       ... \n",
-       "1909    ZWE\n",
-       "1910    ZWE\n",
-       "1911    ZWE\n",
-       "1912    ZWE\n",
-       "1913    ZWE\n",
-       "Name: ISO Country code, Length: 1914, dtype: object"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "temp['ISO Country code']"
+    "#removing empty rows \n",
+    "for row in range(9,len(temp),11):\n",
+    "    temp.drop(row,axis = 0, inplace = True)    \n",
+    "    temp.drop(row+1,axis = 0, inplace = True) \n",
+    "    #print(row,row+1)\n",
+    "temp.reset_index(inplace=True)\n",
+    "temp.drop('index',axis =1, inplace = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "id": "cac9b092-4061-42d7-9de6-59445fa44278",
    "metadata": {},
    "outputs": [],
