--- a/data_statistics.ipynb
+++ b/data_statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e3b0667a-552a-4455-a40e-7ac70c7cd658",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "id": "8a31d94b-b901-40a8-8186-3c7669409841",
    "metadata": {},
    "outputs": [],
@@ -35,8 +35,298 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5c8fc9c9-e7f4-4032-bfeb-22890a1966d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP ($ USD billions PPP)</th>\n",
+       "      <th>GDP per capita in $ (PPP)</th>\n",
+       "      <th>Military Spending as % of GDP</th>\n",
+       "      <th>health expenditure % of GDP</th>\n",
+       "      <th>health expenditure per person</th>\n",
+       "      <th>unemployment (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GDP ($ USD billions PPP)</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.151755</td>\n",
+       "      <td>0.063843</td>\n",
+       "      <td>-0.038209</td>\n",
+       "      <td>0.309400</td>\n",
+       "      <td>-0.115343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GDP per capita in $ (PPP)</th>\n",
+       "      <td>0.151755</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.083268</td>\n",
+       "      <td>0.003238</td>\n",
+       "      <td>0.771658</td>\n",
+       "      <td>-0.168685</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Military Spending as % of GDP</th>\n",
+       "      <td>0.063843</td>\n",
+       "      <td>0.083268</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.069931</td>\n",
+       "      <td>-0.038744</td>\n",
+       "      <td>0.115970</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>health expenditure % of GDP</th>\n",
+       "      <td>-0.038209</td>\n",
+       "      <td>0.003238</td>\n",
+       "      <td>0.069931</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.217403</td>\n",
+       "      <td>0.197297</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>health expenditure per person</th>\n",
+       "      <td>0.309400</td>\n",
+       "      <td>0.771658</td>\n",
+       "      <td>-0.038744</td>\n",
+       "      <td>0.217403</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.128522</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unemployment (%)</th>\n",
+       "      <td>-0.115343</td>\n",
+       "      <td>-0.168685</td>\n",
+       "      <td>0.115970</td>\n",
+       "      <td>0.197297</td>\n",
+       "      <td>-0.128522</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               GDP ($ USD billions PPP)  \\\n",
+       "GDP ($ USD billions PPP)                       1.000000   \n",
+       "GDP per capita in $ (PPP)                      0.151755   \n",
+       "Military Spending as % of GDP                  0.063843   \n",
+       "health expenditure % of GDP                   -0.038209   \n",
+       "health expenditure per person                  0.309400   \n",
+       "unemployment (%)                              -0.115343   \n",
+       "\n",
+       "                               GDP per capita in $ (PPP)  \\\n",
+       "GDP ($ USD billions PPP)                        0.151755   \n",
+       "GDP per capita in $ (PPP)                       1.000000   \n",
+       "Military Spending as % of GDP                   0.083268   \n",
+       "health expenditure % of GDP                     0.003238   \n",
+       "health expenditure per person                   0.771658   \n",
+       "unemployment (%)                               -0.168685   \n",
+       "\n",
+       "                               Military Spending as % of GDP  \\\n",
+       "GDP ($ USD billions PPP)                            0.063843   \n",
+       "GDP per capita in $ (PPP)                           0.083268   \n",
+       "Military Spending as % of GDP                       1.000000   \n",
+       "health expenditure % of GDP                         0.069931   \n",
+       "health expenditure per person                      -0.038744   \n",
+       "unemployment (%)                                    0.115970   \n",
+       "\n",
+       "                               health expenditure % of GDP  \\\n",
+       "GDP ($ USD billions PPP)                         -0.038209   \n",
+       "GDP per capita in $ (PPP)                         0.003238   \n",
+       "Military Spending as % of GDP                     0.069931   \n",
+       "health expenditure % of GDP                       1.000000   \n",
+       "health expenditure per person                     0.217403   \n",
+       "unemployment (%)                                  0.197297   \n",
+       "\n",
+       "                               health expenditure per person  unemployment (%)  \n",
+       "GDP ($ USD billions PPP)                            0.309400         -0.115343  \n",
+       "GDP per capita in $ (PPP)                           0.771658         -0.168685  \n",
+       "Military Spending as % of GDP                      -0.038744          0.115970  \n",
+       "health expenditure % of GDP                         0.217403          0.197297  \n",
+       "health expenditure per person                       1.000000         -0.128522  \n",
+       "unemployment (%)                                   -0.128522          1.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "country_data.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5c2f2161-c399-4215-9d1f-659495540704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GDP ($ USD billions PPP)</th>\n",
+       "      <th>GDP per capita in $ (PPP)</th>\n",
+       "      <th>Military Spending as % of GDP</th>\n",
+       "      <th>health expenditure % of GDP</th>\n",
+       "      <th>health expenditure per person</th>\n",
+       "      <th>unemployment (%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>GDP ($ USD billions PPP)</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.150838</td>\n",
+       "      <td>0.042678</td>\n",
+       "      <td>-0.014678</td>\n",
+       "      <td>0.304622</td>\n",
+       "      <td>-0.125635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GDP per capita in $ (PPP)</th>\n",
+       "      <td>0.150838</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.098244</td>\n",
+       "      <td>0.084441</td>\n",
+       "      <td>0.811930</td>\n",
+       "      <td>-0.193788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Military Spending as % of GDP</th>\n",
+       "      <td>0.042678</td>\n",
+       "      <td>0.098244</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.080891</td>\n",
+       "      <td>0.000792</td>\n",
+       "      <td>0.180996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>health expenditure % of GDP</th>\n",
+       "      <td>-0.014678</td>\n",
+       "      <td>0.084441</td>\n",
+       "      <td>0.080891</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.245548</td>\n",
+       "      <td>0.199228</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>health expenditure per person</th>\n",
+       "      <td>0.304622</td>\n",
+       "      <td>0.811930</td>\n",
+       "      <td>0.000792</td>\n",
+       "      <td>0.245548</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.167784</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unemployment (%)</th>\n",
+       "      <td>-0.125635</td>\n",
+       "      <td>-0.193788</td>\n",
+       "      <td>0.180996</td>\n",
+       "      <td>0.199228</td>\n",
+       "      <td>-0.167784</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               GDP ($ USD billions PPP)  \\\n",
+       "GDP ($ USD billions PPP)                       1.000000   \n",
+       "GDP per capita in $ (PPP)                      0.150838   \n",
+       "Military Spending as % of GDP                  0.042678   \n",
+       "health expenditure % of GDP                   -0.014678   \n",
+       "health expenditure per person                  0.304622   \n",
+       "unemployment (%)                              -0.125635   \n",
+       "\n",
+       "                               GDP per capita in $ (PPP)  \\\n",
+       "GDP ($ USD billions PPP)                        0.150838   \n",
+       "GDP per capita in $ (PPP)                       1.000000   \n",
+       "Military Spending as % of GDP                   0.098244   \n",
+       "health expenditure % of GDP                     0.084441   \n",
+       "health expenditure per person                   0.811930   \n",
+       "unemployment (%)                               -0.193788   \n",
+       "\n",
+       "                               Military Spending as % of GDP  \\\n",
+       "GDP ($ USD billions PPP)                            0.042678   \n",
+       "GDP per capita in $ (PPP)                           0.098244   \n",
+       "Military Spending as % of GDP                       1.000000   \n",
+       "health expenditure % of GDP                         0.080891   \n",
+       "health expenditure per person                       0.000792   \n",
+       "unemployment (%)                                    0.180996   \n",
+       "\n",
+       "                               health expenditure % of GDP  \\\n",
+       "GDP ($ USD billions PPP)                         -0.014678   \n",
+       "GDP per capita in $ (PPP)                         0.084441   \n",
+       "Military Spending as % of GDP                     0.080891   \n",
+       "health expenditure % of GDP                       1.000000   \n",
+       "health expenditure per person                     0.245548   \n",
+       "unemployment (%)                                  0.199228   \n",
+       "\n",
+       "                               health expenditure per person  unemployment (%)  \n",
+       "GDP ($ USD billions PPP)                            0.304622         -0.125635  \n",
+       "GDP per capita in $ (PPP)                           0.811930         -0.193788  \n",
+       "Military Spending as % of GDP                       0.000792          0.180996  \n",
+       "health expenditure % of GDP                         0.245548          0.199228  \n",
+       "health expenditure per person                       1.000000         -0.167784  \n",
+       "unemployment (%)                                   -0.167784          1.000000  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad213775-998f-41a9-a775-771a409cc787",
    "metadata": {},
    "outputs": [],
    "source": []
